<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com
    Derived from Google IO Schedule App, Copyright 2010 Google, Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/db1_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/xml_bg_color_dipalza"
    android:orientation="vertical">

    <LinearLayout style="@style/TitleBar">

        <ImageView
            style="@style/TitleBarLogo"
            android:contentDescription="@string/description_logo" />

        <TextView
            style="@style/TitleBarText"
            android:background="#F4511E"
            android:text="@string/ventas_dipalza"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="6dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/home_btn_recibir"
                style="@style/HomeButton"
                android:layout_height="140dp"
                android:drawableTop="@drawable/img_btn_recibir"
                android:onClick="onClickFeature"
                android:text="@string/title_feature1"
                android:textColor="#BF360C" />

            <Button
                android:id="@+id/home_btn_transmitir"
                style="@style/HomeButton"
                android:layout_height="140dp"
                android:drawableTop="@drawable/img_btn_transmitir"
                android:onClick="onClickFeature"
                android:text="@string/title_feature2"
                android:textColor="#BF360C" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/home_btn_resumen"
                style="@style/HomeButton"
                android:layout_height="140dp"
                android:drawableTop="@drawable/img_btn_resumen"
                android:onClick="onClickFeature"
                android:text="@string/title_feature3"
                android:textColor="#D50000"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/home_btn_configurar"
                style="@style/HomeButton"
                android:layout_height="140dp"
                android:drawableTop="@drawable/setting"
                android:onClick="onClickFeature"
                android:text="@string/title_feature4"
                android:textColor="#BF360C"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/home_btn_ventas"
                style="@style/HomeButton"
                android:layout_height="140dp"
                android:drawableTop="@drawable/img_btn_ventas"
                android:onClick="onClickFeature"
                android:text="@string/title_feature5"
                android:textColor="#BF360C" />

            <Button
                android:id="@+id/home_btn_about"
                style="@style/HomeButton"
                android:layout_height="140dp"
                android:drawableTop="@drawable/img_about"

                android:onClick="onClickFeature"
                android:text="@string/title_feature6"
                android:textColor="#BF360C" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
