<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtClientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/txt_clientes"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:id="@+id/txtRecibidoClientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="Recibidos: 0 de un total de ?"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <ProgressBar
            android:id="@+id/pbClientes"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:scrollbarStyle="insideOverlay"
            android:soundEffectsEnabled="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtProductos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/txt_productos"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtRecibidoPorductos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="Recibidos: 0 de un total de ?"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ProgressBar
            android:id="@+id/pbProductos"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:soundEffectsEnabled="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/txtEspeciales"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtRecibidoEspeciales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recibidos: 0 de un total de ?"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="right"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/pbEspeciales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:soundEffectsEnabled="true"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:baselineAligned="true"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/lblEmision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:text="@string/fecha_ultima_transmision"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/txtFechaTransmision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="Large Text"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:id="@+id/txtIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="Conectado a:"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

        <ImageButton
            android:id="@+id/btnRecibirRecepcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/transmitir" />

</LinearLayout>